<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/id_stock_filling"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_stock_filling"
            android:padding="@dimen/activity_vertical_margin"
            style="@android:style/ButtonBar"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/id_product_maintenance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_product_maintenance"
            android:padding="@dimen/activity_vertical_margin"
            style="@android:style/ButtonBar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/id_ordering"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_ordering"
            android:padding="@dimen/activity_vertical_margin"
            style="@android:style/ButtonBar" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"></LinearLayout>
</LinearLayout>
