<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    tools:context="com.example.rajithhasith.stock_app_android.Stock_fill_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/id_stock_fill_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_menu_count"
            android:padding="@dimen/activity_vertical_margin"
            style="@android:style/ButtonBar"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/id_stock_fill_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_menu_fill_check"
            android:padding="@dimen/activity_vertical_margin"
            style="@android:style/ButtonBar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/id_stock_fill_reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_menu_fill_reset"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@android:color/holo_red_dark"
            style="@android:style/ButtonBar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"></LinearLayout>

</LinearLayout>
